objects/Cuenta_Bancaria_Inv__c.object
<CustomObject>
    <description>Objeto para indicar las cuentas bancarias de los Clientes de Banca inversiones. Información requerida para la creación de clientes en Sebra</description>
    <fields>
        <fullName>Banco__c</fullName>
        <label>Banco</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Origen_de_la_Cuenta__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>1 FIRST BANK</fullName>
                </value>
                <value>
                    <fullName>ABN AMRO BANK</fullName>
                </value>
                <value>
                    <fullName>ABN AMRO BANK (CHILE)</fullName>
                </value>
                <value>
                    <fullName>AMERICAN EXPRESS BANK</fullName>
                </value>
                <value>
                    <fullName>AMERICAN NATIONAL BANK</fullName>
                </value>
                <value>
                    <fullName>AMTRADE BANK</fullName>
                </value>
                <value>
                    <fullName>BAC FLORIDA BANK</fullName>
                </value>
                <value>
                    <fullName>BANCA COMMERCIALE ITALIANA</fullName>
                </value>
                <value>
                    <fullName>BANCOINTERNACIONAL</fullName>
                </value>
                <value>
                    <fullName>BANCO ATLANTICO</fullName>
                </value>
                <value>
                    <fullName>BANCO BBVA</fullName>
                </value>
                <value>
                    <fullName>BANCO BICE</fullName>
                </value>
                <value>
                    <fullName>BANCO BILBAO VIZCAYA</fullName>
                </value>
                <value>
                    <fullName>BANCO CENTRAL DE CHILE</fullName>
                </value>
                <value>
                    <fullName>BANCO CONSORCIO</fullName>
                </value>
                <value>
                    <fullName>BANCO CREDITO INVERSIONES</fullName>
                </value>
                <value>
                    <fullName>BANCO DE CHILE</fullName>
                </value>
                <value>
                    <fullName>BANCO DE CHILE/EDWARDS-CITI</fullName>
                </value>
                <value>
                    <fullName>BANCO DE CREDITO E INVERSIONES</fullName>
                </value>
                <value>
                    <fullName>BANCO DEL DESARROLLO</fullName>
                </value>
                <value>
                    <fullName>BANCO DEL ESTADO DE CHILE</fullName>
                </value>
                <value>
                    <fullName>BANCO DO BRASIL</fullName>
                </value>
                <value>
                    <fullName>BANCO DO BRASIL S A</fullName>
                </value>
                <value>
                    <fullName>BANCO ECONOMICO</fullName>
                </value>
                <value>
                    <fullName>BANCO EDWARDS CITI</fullName>
                </value>
                <value>
                    <fullName>BANCO EXTERIOR DE ESPANA</fullName>
                </value>
                <value>
                    <fullName>BANCO FALABELLA</fullName>
                </value>
                <value>
                    <fullName>BANCO INTERNACIONAL</fullName>
                </value>
                <value>
                    <fullName>BANCO ITAÚ CHILE</fullName>
                </value>
                <value>
                    <fullName>BANCO MERCANTIL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cliente__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Cliente</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Cuentas Bancarias Inv</relationshipLabel>
        <relationshipName>Cuentas_Bancarias_Inv</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Esta_es_la_Cuenta_Principal__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Marque la casilla para indicar que es la cuenta principal del Cliente</inlineHelpText>
        <label>Esta es la Cuenta Principal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Moneda__c</fullName>
        <label>Moneda</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CLP</fullName>
                    <label>Peso</label>
                </value>
                <value>
                    <fullName>USD</fullName>
                    <label>Dolar</label>
                </value>
                <value>
                    <fullName>EUR</fullName>
                    <label>Euro</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Numero__c</fullName>
        <inlineHelpText>Número de la cuenta</inlineHelpText>
        <label>Número</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Origen_de_la_Cuenta__c</fullName>
        <label>Origen de la Cuenta</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Chile</fullName>
                    <default>true</default>
                    <label>Chile</label>
                </value>
                <value>
                    <fullName>Bancos extranjeros</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sucursal__c</fullName>
        <label>Sucursal</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tipo_de_Cuenta__c</fullName>
        <label>Tipo de Cuenta</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cuenta Corriente</fullName>
                    <default>true</default>
                    <label>Cuenta Corriente</label>
                </value>
                <value>
                    <fullName>Cuenta Ahorro</fullName>
                </value>
                <value>
                    <fullName>Cuenta Vista</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Cuenta Bancaria Inv</label>
    <nameField>
        <displayFormat>CB-{0000000}</displayFormat>
        <label>ID Cuenta Bancaria en SF</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cuentas Bancarias Inv</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>